Fix: Worked on vertical alignment

--- a/styles.css
+++ b/styles.css
@@ -246,7 +246,6 @@ tbody tr:last-child td {
     background-color: var(--color-stone-100);
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     font-size: 1rem;
   }
